<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".trainingCreation.createTrainingStart" >

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_chevron_left_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="40dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/startTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/start_training"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/name_of_training"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/trainingNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:hint="Enter name of the training"
            android:inputType="textPersonName"
            android:text="test" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/distance_from_target"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/distanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="0-100m"
            android:inputType="numberSigned"
            android:text="25" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/continue_string"
            android:textAllCaps="false" />
    </LinearLayout>
</FrameLayout>